#ifndef LABORATORY_WORK_IN_INFORMATION_ENGINEERING_III_CAR_CONTROLLER_H
#define LABORATORY_WORK_IN_INFORMATION_ENGINEERING_III_CAR_CONTROLLER_H

/**
 * 車の制御クラスのインタフェース
 */
class CarController {
public:
    virtual void Operate() = 0;
};


#endif //LABORATORY_WORK_IN_INFORMATION_ENGINEERING_III_CAR_CONTROLLER_H
