#ifndef LABORATORY_WORK_IN_INFORMATION_ENGINEERING_III_MOVE_DIRECTION_H
#define LABORATORY_WORK_IN_INFORMATION_ENGINEERING_III_MOVE_DIRECTION_H

enum MoveDirection {
    forward, backward
};

#endif //LABORATORY_WORK_IN_INFORMATION_ENGINEERING_III_MOVE_DIRECTION_H
